fix dots & hide overflow scrollbar on pdp images

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -108,3 +108,13 @@ nav {
 .dot.active {
   background: black;
 }
+
+/* Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
